Fixed align-items

--- a/src/css/settimes_style.css
+++ b/src/css/settimes_style.css
@@ -4,7 +4,7 @@ body {
 	background-color: whitesmoke;
 	display: flex;
 	flex-direction: column;
-	align-items: left;
+	align-items: flex-start;
     margin: 0px;
     padding: 0px;
     
